Fixed: difference between chrome and safari
Now, we set left to 0, and remove the padding as it was based off a left
of 0 which is not what we want.

If we end up wanting more padding, we must add the padding to the parent
element as well, otherwise it will look weird and be slightly offset

--- a/frontend/src/nav.scss
+++ b/frontend/src/nav.scss
@@ -77,9 +77,9 @@ nav.nav {
   position: absolute;
   border-radius: 3px;
   top: 100%;
+  left: 0;
   z-index: 100;
   cursor: default;
-  padding: 5px;
   margin-top: 5px;
   background-color: white;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
